Upload 2-weeks study files

--- a/test/10/10020.html
+++ b/test/10/10020.html
@@ -5,13 +5,12 @@
     
     <title>Counter</title>
 </head>
-        <!-- 자바스크립트는 모든 것을 다 객체로 본다. -->
 <body>
     <div id="counter">0</div>
     <button id="increase">+</button>
     <button id="decrease">-</button>
     <script>
-        const $counter = document.getElementById('counter');
+        const $counter = document.getElementById('counter-x');
         const $increase = document.getElementById('increase');
         const $decrease = document.getElementById('decrease');
 
