--- a/test/10/10052.html
+++ b/test/10/10052.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     
@@ -10,8 +10,8 @@
         alert("알림창");
         var reply = confirm("확인창");
         var name = prompt("이름을 입력해주세요." , "예 홍길동");
-        documnet.write("확인창에 입력된 값 :" + reply + "<br>");
-        documnet.write("프롬포트에 입력된 값 : <h1>" + name + "</h1>");
+        document.write("확인창에 입력된 값 : " + reply + "<br>");
+        document.write("프롬포트에 입력된 값 : <h1>" + name + "</h1>");
         console.log("콘솔에 출력하기");
     </script>
 </body>
