--- a/test/10/10095.html
+++ b/test/10/10095.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html>
 <head>
     <meta charset="UTF-8">
-    
     <script>
         var num1 = parseInt(prompt("첫 번째 숫자를 입력하세요."));
         var num2 = parseInt(prompt("두 번째 숫자를 입력하세요."));
@@ -22,12 +20,10 @@
                 else {
                     document.write("두 수는 같습니다");
                 }
-
             }
             else {
                 document.write("숫자 형식으로 입력해야 합니다");
             }
-
         }
         else {
             document.write("값을 입력해 주세요");
@@ -35,9 +31,6 @@
     </script>
     <title>Document</title>
 </head>
-
 <body>
-
 </body>
-
 </html>
