--- a/test/11/11046.html
+++ b/test/11/11046.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <script>
@@ -13,7 +13,6 @@
         var person1 = new Person("kin");
         var person2 = new Person("Lee");
 
-
         person1.sayHello();
         person2.sayHello();
         
@@ -21,6 +20,5 @@
     <title>Document</title>
 </head>
 <body>
-    
 </body>
 </html>
