--- a/test/11/11033.html
+++ b/test/11/11033.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    
-    <title>Document</title>
 </head>
 <body>
     <button onclick="counter()">Click me</button>
