--- a/test/11/11041.html
+++ b/test/11/11041.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <script>
@@ -22,6 +22,5 @@
     <title>Document</title>
 </head>
 <body>
-    
 </body>
 </html>
