--- a/test/11/11077.html
+++ b/test/11/11077.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script>
-        const arr =[1,2,3,4,];
+        const arr =[1,2,3,4];
 
         let result = arr.join();
         console.log(result);
 
-        resutl = arr.push(5, 6);
+        result = arr.join('-');
+        console.log(result);
+
+        arrResult = arr.push(5, 6);
         console.log(arrResult);
         console.log(arr);
 
