--- a/test/11/11090.html
+++ b/test/11/11090.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
     <meta charset="UTF-8">
+    
     <title>Document</title>
-    <style>
-        div{border: 1px solid #000;}
-        #outer{
-            background-color: blue;
-            width:200px;
-            height: 200px;
-        }
-        #inner{
-            background-color: red;
-            width:100px;
-            height: 100px;
-        }
-    </style>
 </head>
 <body>
-    <div id="outer">
-        <div id="inner"></div>    
-    </div>
-
     <script>
-        const outer = document.querySelector('#outer');
-        const inner = document.querySelector('#inner');
+        const str1 = 'a123456b';
+        const str2 = 'cal123456bd';
 
-        outer.addEventListener('click',function(){
-            alert('outer');
-        },true);
-        
-        inner.addEventListener('click',function(){
-            alert('inner');
-        },true);
+        const regExp1 = /a......b/;
+        const regExp2 = /a123456b/;
+        const regExp3 = /^a/;
+        const regExp4 = /b$/;
 
+        console.log(regExp1.exec(str1));
+        console.log(regExp1.exec(str2));
+        console.log(regExp2.exec(str1));
+        console.log(regExp2.exec(str2));
+        console.log(regExp3.exec(str1));
+        console.log(regExp3.exec(str2));
+        console.log(regExp4.exec(str1));
+        console.log(regExp4.exec(str2));
 
     </script>
 </body>
